--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.png" alt="" /></a>
 					<h1><strong>Zackary Crosley</strong>
-                                          Researcher at SEFCOM, Arizona State University
+                                          Researcher <br />
+                                          at SEFCOM, Arizona State University
                                           <br />
 					</h1>
 				</div>
