--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>
+						<a href="#about" class="icon solid fa-user"><span>About</span></a>
+						<a href="#work" class="icon solid fa-briefcase"><span>Work</span></a>
+						<a href="#hobbies" class="icon solid fa-futbol"><span>Hobbies</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -31,13 +31,37 @@
 						<!-- Me -->
 							<article id="home" class="panel intro">
 								<header>
-									<h1>Jane Doe</h1>
-									<p>Senior Astral Projectionist</p>
+									<h1>Zackary Crosley</h1>
+									<p>Computer Scientist</p>
 								</header>
-								<a href="#work" class="jumplink pic">
+								<a href="#about" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
 									<img src="images/me.jpg" alt="" />
 								</a>
+							</article>
+
+						<!-- About -->
+							<article id="about" class="panel">
+								<header>
+									<h2>About</h2>
+								</header>
+								<p>
+									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
+									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+									luctus elit eget interdum.
+								</p>
+								<span class="icon solid fa-graduation-cap fa-lg">&nbsp;Education</span><br>
+								<p>
+									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
+									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+									luctus elit eget interdum.
+								</p>
+								<span class="icon solid fa-users fa-lg">&nbsp;Organizations</span><br>
+								<p>
+									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
+									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+									luctus elit eget interdum.
+								</p>
 							</article>
 
 						<!-- Work -->
@@ -46,78 +70,46 @@
 									<h2>Work</h2>
 								</header>
 								<p>
+									Talk about work interests in here. Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
+									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+									luctus elit eget interdum.
+								</p>
+								<span class="icon solid fa-code-branch fa-lg">&nbsp;Experience</span><br>
+								<p>
 									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
 									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
 									luctus elit eget interdum.
 								</p>
-								<section>
-									<div class="row">
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
-										</div>
-									</div>
-								</section>
+								<span class="icon solid fa-book-open fa-lg">&nbsp;Publications</span><br>
+								<p>
+									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
+									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+									luctus elit eget interdum.
+								</p>
+								<span class="icon solid fa-code fa-lg">&nbsp;Languages</span><br>
+								<p>
+									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
+									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+									luctus elit eget interdum.
+								</p>
 							</article>
 
-						<!-- Contact -->
-							<article id="contact" class="panel">
+						<!-- Hobbies -->
+							<article id="hobbies" class="panel">
 								<header>
-									<h2>Contact Me</h2>
+									<h2>Other Interests</h2>
 								</header>
-								<form action="#" method="post">
-									<div>
-										<div class="row">
-											<div class="col-6 col-12-medium">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="col-6 col-12-medium">
-												<input type="text" name="email" placeholder="Email" />
-											</div>
-											<div class="col-12">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message" rows="6"></textarea>
-											</div>
-											<div class="col-12">
-												<input type="submit" value="Send Message" />
-											</div>
-										</div>
-									</div>
-								</form>
+								<p>
+									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
+									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+									luctus elit eget interdum.
+								</p>
+								<span class="icon solid fa-hand-rock fa-lg">&nbsp;Rock Climbing</span><br>
+								<span class="icon solid fa-map fa-lg">&nbsp;Hiking & Backpacking</span><br>
+								<span class="icon solid fa-tree fa-lg">&nbsp;Archery</span><br>
+								<span class="icon solid fa-utensils fa-lg">&nbsp;Cooking</span><br>
+								<span class="icon solid fa-dumbbell fa-lg">&nbsp;Weightlifting</span><br>
+								<span class="icon solid fa-dice fa-lg">&nbsp;Games</span><br>
 							</article>
 
 					</div>
@@ -125,7 +117,10 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li><a href="https://github.com/crosleyzack" class="icon brands fa-github"></a></li>
+							<li><a href="https://www.linkedin.com/in/crosleyzack/" class="icon brands fa-linkedin"></a></li>
+							<li><a href="mailto:crosleyzack[at]duck[dot]com" class="icon solid fa-envelope"></a></li>
+							<!--<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>-->
 						</ul>
 					</div>
 
