Changed Hobbies to Interests

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#about" class="icon solid fa-user"><span>About</span></a>
 						<a href="#work" class="icon solid fa-briefcase"><span>Work</span></a>
-						<a href="#hobbies" class="icon solid fa-futbol"><span>Hobbies</span></a>
+						<a href="#interests" class="icon solid fa-futbol"><span>Interests</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -95,7 +95,7 @@
 							</article>
 
 						<!-- Hobbies -->
-							<article id="hobbies" class="panel">
+							<article id="interests" class="panel">
 								<header>
 									<h2>Other Interests</h2>
 								</header>
