--- a/index.html
+++ b/index.html
@@ -99,17 +99,47 @@
 								<header>
 									<h2>Other Interests</h2>
 								</header>
-								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
-								</p>
 								<span class="icon solid fa-hand-rock fa-lg">&nbsp;Rock Climbing</span><br>
+								<p>
+									Rock climbing is a recent passion of mine, but one I have dedicated significant time to recently. I
+									enjoy both the problem solving aspect - how do you move your body to progress upwards - as well as 
+									the strength and coordination it requires. I have learned to lead climb and am
+									looking forward to climbing bolted routes nearby my city, with the goal of climbing a 5.10 by the summer.
+								</p>
 								<span class="icon solid fa-map fa-lg">&nbsp;Hiking & Backpacking</span><br>
+								<p>
+									Since my time in Boy Scouts I have been an avid hiker. Backpacking was never as much of a passion of
+									mine, but my interest in returning to it grew during pandemic lockdown. My partner, our dog, and I have
+									begun backpacking again with a goal of completing a rim to rim trip of the Grand Canyon.
+								</p>	
 								<span class="icon solid fa-tree fa-lg">&nbsp;Archery</span><br>
+								<p>
+									Archery is a sport I was also introduced to during my time in Scouts and quickly grew to love.
+									I find something more enticing with archery than other shooting sports - there is something very
+									primal about shooting a bow. I would like to do more 3D shooting, though it has been years since I last did.
+								</p>	
 								<span class="icon solid fa-utensils fa-lg">&nbsp;Cooking</span><br>
+								<p>
+									Cooking began as a necessity, not an interest. In college my roommate and I were living
+									on our own, and had to feed ourselves. Since money was tight, eating out regularly was
+									not an option. We began teaching ourselves how to cook, and became quite good as college
+									progressed. I now cook both to eat healthy and to enjoy foods that I love, with recent 
+									recipes including Pad Thai, Felafel, Turkey with Red Chili Sauce, and Sous Vide Filet Minon,
+									to name a few. I have also become quite good recently with my Latte machine.
+								</p>
 								<span class="icon solid fa-dumbbell fa-lg">&nbsp;Weightlifting</span><br>
+								<p>
+									Weightlifting is a necessary training to gain and maintain the strength I need for other
+									activities, like archery and rock climbing. Beyond that my regular visits to the gym organize
+									my day and motivate me. My current weightlifting goal is to build strength,
+									increasing the weight for compound lifts to help improve my rock climbing.
+								</p>
 								<span class="icon solid fa-dice fa-lg">&nbsp;Games</span><br>
+								<p>
+									During graduate school, Dungeons and Dragons served as an important outlet for me and members
+									of my research lab to unwind. I first played D&D as a child and have loved it ever since. I
+									also enjoy a great variety of games, from strategy games to first person shooters.
+								</p>
 							</article>
 
 					</div>
