Added flex tables for publications, education, etc

--- a/index.html
+++ b/index.html
@@ -51,17 +51,61 @@
 									luctus elit eget interdum.
 								</p>
 								<span class="icon solid fa-graduation-cap fa-lg">&nbsp;&nbsp;Education</span><br>
-								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
-								</p>
+								<section style="margin-bottom: 2em;">
+									<div class="row text-row">
+										<div class="col-3 col-6-medium col-12-small">
+											Master's of Science
+										</div>
+										<div class="col-3 col-6-medium col-12-small">
+											Computer Science
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											Arizona State University
+										</div>
+										<div class="col-2 col-6-medium col-12-small">
+											August 2019
+										</div>
+									</div>
+									<div class="row text-row">
+										<div class="col-3 col-6-medium col-12-small">
+											Bachelor's of Science
+										</div>
+										<div class="col-3 col-6-medium col-12-small">
+											Computer Science
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											Arizona State University
+										</div>
+										<div class="col-2 col-6-medium col-12-small">
+											December 2017
+										</div>
+									</div>
+								</section>
 								<span class="icon solid fa-users fa-lg">&nbsp;&nbsp;Organizations</span><br>
-								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
-								</p>
+								<section style="margin-bottom: 2em;">
+									<div class="row text-row">
+										<div class="col-3 col-12-small">
+											FIRST Robotics
+										</div>
+										<div class="col-6 col-12-small">
+											Served as Team Mentor assisting with training students to program.
+										</div>
+										<div class="col-3 col-12-small">
+											2012 - 2019
+										</div>
+									</div>
+									<div class="row text-row">
+										<div class="col-3 col-12-small">
+											Boy Scouts of America
+										</div>
+										<div class="col-6 col-12-small">
+											Served as Advisor assisting youth to fulfill their leadership roles.
+										</div>
+										<div class="col-3 col-12-small">
+											2015 - 2018
+										</div>
+									</div>
+								</section>
 							</article>
 
 						<!-- Work -->
@@ -81,17 +125,82 @@
 									luctus elit eget interdum.
 								</p>
 								<span class="icon solid fa-book-open fa-lg">&nbsp;&nbsp;Publications</span><br>
-								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
-								</p>
+								<section style="margin-bottom: 2em;">
+									<div class="row text-row">
+										<div class="col-3 col-12-small">
+											Master's Thesis
+										</div>
+										<div class="col-9 col-12-small">
+											<a href="https://repository.asu.edu/items/54846">Automatic Reflection of CTF Hostile Exploits (ARCHES)</a>
+										</div>
+									</div>
+									<div class="row text-row">
+										<div class="col-3 col-12-small">
+											Journal Article
+										</div>
+										<div class="col-9 col-12-small">
+											<a href="https://link.springer.com/chapter/10.1007/978-3-319-96136-1_4">Mining Associations in Large Graphs for Dynamically Incremented Marked Nodes</a>
+										</div>
+									</div>
+								</section>
+								<!--<ul class="no-bullets">
+									<li>Master's Thesis - <a href="https://repository.asu.edu/items/54846">Automatic Reflection of CTF Hostile Exploits (ARCHES)</a><br/></li>
+									<li>Journal Article - <a href="https://link.springer.com/chapter/10.1007/978-3-319-96136-1_4">Mining Associations in Large Graphs for Dynamically Incremented Marked Nodes</a></li>
+								</ul>-->
 								<span class="icon solid fa-code fa-lg">&nbsp;&nbsp;Languages</span><br>
-								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
-								</p>
+								<section style="margin-bottom: 2em;">
+									<div class="row text-row">
+										<div class="col-2 col-12-small">
+											Python
+										</div><div class="col-10 col-12-small">
+											Primary language, used in current job and multiple college courses
+										</div>
+									</div>
+									<div class="row text-row">
+										<div class="col-2 col-12-small">
+											Java
+										</div><div class="col-10 col-12-small">
+											Used in current job and multiple college courses
+										</div>
+									</div>
+									<div class="row text-row">
+										<div class="col-2 col-12-small">
+											C / C++
+										</div><div class="col-10 col-12-small">
+											First programming language. Used in previous job and college security courses
+										</div>
+									</div>
+									<div class="row text-row">
+										<div class="col-2 col-12-small">
+											Julia
+										</div><div class="col-10 col-12-small">
+											Used for personal projects
+										</div>
+									</div>
+									<div class="row text-row">
+										<div class="col-2 col-12-small">
+											Clojure
+										</div><div class="col-10 col-12-small">
+											Used for personal projects and college course project
+										</div>
+									</div>
+									<div class="row text-row">
+										<div class="col-2 col-12-small">
+											C#
+										</div><div class="col-10 col-12-small">
+											Used for personal projects and college course projects
+										</div>
+									</div>
+
+								</section>
+								<!--<ul class="no-bullets">
+									<li>Python | Primary language, used in current job and multiple college courses</li>
+									<li>Java &nbsp;&nbsp;&nbsp;&nbsp;| Used in current job and multiple college courses</li>
+									<li>C / C++ | First programming language. Used in previous job and college security courses</li>
+									<li>Julia &nbsp;&nbsp;&nbsp;&nbsp;| Used for personal projects</li>
+									<li>C# &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| Used for personal projects and college course projects</li>
+									<li>Clojure | Used for personal projects and college course project</li>
+								</ul>-->
 
 							</article>
 
