Added philosophy to set of interests.

--- a/index.html
+++ b/index.html
@@ -244,6 +244,15 @@
 									my day and motivate me. My current weightlifting goal is to build strength,
 									increasing the weight for compound lifts to help improve my rock climbing.
 								</p>
+								<span class="icon solid fa-balance-scale fa-lg">&nbsp;&nbsp;Philosophy</span><br>
+								<p>
+									I have a keen interest in philosophy, especially the practical philosophies of the Hellenistic
+									period. While philosophy is often portrayed as armchair theorizing, and some certainly
+									is, others ask important questions about how we should live our lives and make 
+									difficult decisions. I am particularly interested in the Roman Stoic philosophers, whose
+									virtue ethics emphasized the identification of what is within our control and was the basis
+									for modern Cognitive Behavioral Therapy.
+								</p>
 								<span class="icon solid fa-dice fa-lg">&nbsp;&nbsp;Games</span><br>
 								<p>
 									During graduate school, Dungeons and Dragons served as an important outlet for me and members
