Added sections for experience.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
 									luctus elit eget interdum.
 								</p>
+								<!-- Education Section -->
 								<span class="icon solid fa-graduation-cap fa-lg">&nbsp;&nbsp;Education</span><br>
 								<section style="margin-bottom: 2em;">
 									<div class="row text-row">
@@ -81,6 +82,7 @@
 										</div>
 									</div>
 								</section>
+								<!-- Organizations Section -->
 								<span class="icon solid fa-users fa-lg">&nbsp;&nbsp;Organizations</span><br>
 								<section style="margin-bottom: 2em;">
 									<div class="row text-row">
@@ -118,12 +120,43 @@
 									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
 									luctus elit eget interdum.
 								</p>
+								<!-- Experience Section -->
 								<span class="icon solid fa-code-branch fa-lg">&nbsp;&nbsp;Experience</span><br>
-								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
-								</p>
+								<section style="margin-bottom: 2em;">
+									<div class="row text-row">
+										<div class="col-12">
+											Scientific Computing
+										</div>
+										<div class="col-12">
+											TODO
+										</div>
+									</div>
+									<div class="row text-row">
+										<div class="col-12">
+											Computer Security
+										</div>
+										<div class="col-12">
+											TODO
+										</div>
+									</div>
+									<div class="row text-row">
+										<div class="col-12">
+											Artificial Intelligence
+										</div>
+										<div class="col-12">
+											TODO
+										</div>
+									</div>
+									<div class="row text-row">
+										<div class="col-12">
+											Functional Programming
+										</div>
+										<div class="col-12">
+											TODO
+										</div>
+									</div>
+								</section>
+								<!-- Publications Section -->
 								<span class="icon solid fa-book-open fa-lg">&nbsp;&nbsp;Publications</span><br>
 								<section style="margin-bottom: 2em;">
 									<div class="row text-row">
@@ -143,10 +176,7 @@
 										</div>
 									</div>
 								</section>
-								<!--<ul class="no-bullets">
-									<li>Master's Thesis - <a href="https://repository.asu.edu/items/54846">Automatic Reflection of CTF Hostile Exploits (ARCHES)</a><br/></li>
-									<li>Journal Article - <a href="https://link.springer.com/chapter/10.1007/978-3-319-96136-1_4">Mining Associations in Large Graphs for Dynamically Incremented Marked Nodes</a></li>
-								</ul>-->
+								<!-- Languages Section -->
 								<span class="icon solid fa-code fa-lg">&nbsp;&nbsp;Languages</span><br>
 								<section style="margin-bottom: 2em;">
 									<div class="row text-row">
@@ -191,20 +221,10 @@
 											Used for personal projects and college course projects
 										</div>
 									</div>
-
 								</section>
-								<!--<ul class="no-bullets">
-									<li>Python | Primary language, used in current job and multiple college courses</li>
-									<li>Java &nbsp;&nbsp;&nbsp;&nbsp;| Used in current job and multiple college courses</li>
-									<li>C / C++ | First programming language. Used in previous job and college security courses</li>
-									<li>Julia &nbsp;&nbsp;&nbsp;&nbsp;| Used for personal projects</li>
-									<li>C# &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| Used for personal projects and college course projects</li>
-									<li>Clojure | Used for personal projects and college course project</li>
-								</ul>-->
-
 							</article>
 
-						<!-- Hobbies -->
+						<!-- Other Interests -->
 							<article id="interests" class="panel">
 								<header>
 									<h2>Other Interests</h2>
