Added more details to programming languages.

--- a/index.html
+++ b/index.html
@@ -183,42 +183,50 @@
 										<div class="col-2 col-12-small">
 											Python
 										</div><div class="col-10 col-12-small">
-											Primary language, used in current job and multiple college courses
+											Primary language I use in my current job and throughout college. Deep familiarity 
+											with core libraries and language features. I also have experience with Numpy, 
+											SciPy, Pandas, Pwntools, Scapy, Tkinter, MatPlotLib, and Pillow.
 										</div>
 									</div>
 									<div class="row text-row">
 										<div class="col-2 col-12-small">
 											Java
 										</div><div class="col-10 col-12-small">
-											Used in current job and multiple college courses
+											Used in current job and in past college courses. Familiarity with features of the
+											language and core libraries. Experience with Maven, Log4j, JUnit, and Neo4j.
 										</div>
 									</div>
 									<div class="row text-row">
 										<div class="col-2 col-12-small">
 											C / C++
 										</div><div class="col-10 col-12-small">
-											First programming language. Used in previous job and college security courses
+											First programming language used in previous jobs and in college. Familiarity with
+											pointers, the manual allocation of memory and garbage collection, and the C
+											standard library. Experience with OpenMP and Qt. 
 										</div>
 									</div>
 									<div class="row text-row">
 										<div class="col-2 col-12-small">
 											Julia
 										</div><div class="col-10 col-12-small">
-											Used for personal projects
+											Used for personal projects. Huge fan of the type system and multi-dispatch. My
+											only complaint with this language is the fact it is eager evaluation and not 
+											lazy evaluation. If it was lazy by default, it would be my new default language. 
 										</div>
 									</div>
 									<div class="row text-row">
 										<div class="col-2 col-12-small">
 											Clojure
 										</div><div class="col-10 col-12-small">
-											Used for personal projects and college course project
-										</div>
-									</div>
-									<div class="row text-row">
+											Used for personal projects and college course project. This language was how I 
+											learned functional programming and to use real macros. Huge fan of the advantages
+											of homoiconicity. I would love to use Clojure more, but its still a fairly obscure
+											language.
 										<div class="col-2 col-12-small">
 											C#
 										</div><div class="col-10 col-12-small">
-											Used for personal projects and college course projects
+											Used for personal projects and college course projects. Worked with members of
+											scouting to produce a registration system. Familiar with Entity framework an ASP.NET.
 										</div>
 									</div>
 								</section>
