Fixed accidentally deleted div tag.

--- a/index.html
+++ b/index.html
@@ -217,14 +217,18 @@
 									<div class="row text-row">
 										<div class="col-2 col-12-small">
 											Clojure
-										</div><div class="col-10 col-12-small">
+										</div>
+										<div class="col-10 col-12-small">
 											Used for personal projects and college course project. This language was how I 
 											learned functional programming and to use real macros. Huge fan of the advantages
 											of homoiconicity. I would love to use Clojure more, but its still a fairly obscure
 											language.
+										</div>
+									<div class="row text-row">
 										<div class="col-2 col-12-small">
 											C#
-										</div><div class="col-10 col-12-small">
+										</div>
+										<div class="col-10 col-12-small">
 											Used for personal projects and college course projects. Worked with members of
 											scouting to produce a registration system. Familiar with Entity framework an ASP.NET.
 										</div>
