Fixes to interest section (spelling).

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 								<p>
 									Archery is a sport I was also introduced to during my time in Scouts and quickly grew to love.
 									I find something more enticing with archery than other shooting sports - there is something very
-									primal about shooting a bow. I would like to do more 3D shooting, though it has been years since I last did.
+									primal about shooting a bow. I would like to do more 3D shooting in the future.
 								</p>	
 								<span class="icon solid fa-utensils fa-lg">&nbsp;&nbsp;Cooking</span><br>
 								<p>
@@ -266,7 +266,7 @@
 									on our own, and had to feed ourselves. Since money was tight, eating out regularly was
 									not an option. We began teaching ourselves how to cook, and became quite good as college
 									progressed. I now cook both to eat healthy and to enjoy foods that I love, with recent 
-									recipes including Pad Thai, Felafel, Turkey with Red Chili Sauce, and Sous Vide Filet Minon,
+									recipes including Pad Thai, Falafel, Turkey with Red Chili Sauce, and Sous Vide Filet Minon,
 									to name a few. I have also become quite good recently with my Latte machine.
 								</p>
 								<span class="icon solid fa-dumbbell fa-lg">&nbsp;&nbsp;Weightlifting</span><br>
