Added notes for experiences section.

--- a/index.html
+++ b/index.html
@@ -136,7 +136,12 @@
 											Computer Security
 										</div>
 										<div class="col-12">
-											TODO
+											Capture The Flag (pwndevils)
+											Binary Exploitation (Buffer Overflow, Format String Exploitation, Loop Overflow, Return Oriented Programming)
+											Binary Reverse Engineering (Ada)
+											Network Security (ARP spoofing, IP spoofing, TCP spoofing)
+											Web Security (Cross Site Scripting, SQL Injection)
+											Automatic Exploit Generation (ire)
 										</div>
 									</div>
 									<div class="row text-row">
@@ -144,7 +149,16 @@
 											Artificial Intelligence
 										</div>
 										<div class="col-12">
-											TODO
+											Coursework included
+												Classifiers (SVM, KNN, Bayes Classifier, Logistic Regression)
+												Clustering (KNN, K-Means, Locality Sensitive Hashing)
+												Reinforcement Learning (Markov Decision Processes)
+											Work Applications included
+												Graph Theory and Heuristic Searches
+												Evolutionary Algorithms
+												Utility AI
+											Research Applications
+												Inductive Programming
 										</div>
 									</div>
 									<div class="row text-row">
@@ -152,7 +166,11 @@
 											Functional Programming
 										</div>
 										<div class="col-12">
-											TODO
+											To Discuss:
+											Purely Functional Data Structures Paper
+											Use of functional approaches to solve problems.
+												Navigation Library at work.
+												Clojure project for school.
 										</div>
 									</div>
 								</section>
@@ -283,7 +301,7 @@
 									is, others ask important questions about how we should live our lives and make 
 									difficult decisions. I am particularly interested in the Roman Stoic philosophers, whose
 									virtue ethics emphasized the identification of what is within our control and was the basis
-									for modern Cognitive Behavioral Therapy.
+									for Cognitive Behavioral Therapy.
 								</p>
 								<span class="icon solid fa-dice fa-lg">&nbsp;&nbsp;Games</span><br>
 								<p>
