--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Astral by HTML5 UP</title>
+		<title>Zackary Crosley Computer Scientist</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -128,7 +128,7 @@
 											Scientific Computing
 										</div>
 										<div class="col-12">
-											TODO
+											TODO	
 										</div>
 									</div>
 									<div class="row text-row">
