--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 											Scientific Computing
 										</div>
 										<div class="col-12">
-											TODO	
+											Combat Modeling
 										</div>
 									</div>
 									<div class="row text-row">
@@ -238,17 +238,18 @@
 										</div>
 										<div class="col-10 col-12-small">
 											Used for personal projects and college course project. This language was how I 
-											learned functional programming and to use real macros. Huge fan of the advantages
-											of homoiconicity. I would love to use Clojure more, but its still a fairly obscure
+											learned functional programming and take advantage of homoiconicity with real macros. 
+											I would love to use Clojure more, but its still a fairly obscure
 											language.
 										</div>
+									</div>
 									<div class="row text-row">
 										<div class="col-2 col-12-small">
 											C#
 										</div>
 										<div class="col-10 col-12-small">
-											Used for personal projects and college course projects. Worked with members of
-											scouting to produce a registration system. Familiar with Entity framework an ASP.NET.
+											Used for personal projects and college courses. Worked with members of
+											BSA to produce a registration system. Familiar with Entity framework and ASP.NET.
 										</div>
 									</div>
 								</section>
