--- a/index.html
+++ b/index.html
@@ -128,7 +128,17 @@
 											Scientific Computing
 										</div>
 										<div class="col-12">
-											Combat Modeling
+											My professional career has been spent with the Department of Defense working in the field of 
+											Computational Sciences, specifically Combat Modeling. My first job with the Navy involved development
+											of a deterministic, closed-form simulation used to evaluate aircraft Tactics, Techniques, and
+											Procedures (TTPs). This simulation mutated Subject Matter Expert (SME) encoded strategies across
+											a variety of scenarios to evaluate effectiveness of alternative TTPs. Our work involved not only
+											algorithm development but the maintenance of the two hundred node, Windows Server cluster computer
+											on which they were run. My work included performing updates and developing utilities for job
+											submission and server maintenance. My current job is working on an Army closed-form, Monte Carlo, 
+											discrete event combat simulator used for analysis of acquisition decisions. I have worked on defining
+											automated and intelligent behaviors for entities within the simulation as well as extending the
+											simulation to model new functionalities.
 										</div>
 									</div>
 									<div class="row text-row">
@@ -136,12 +146,17 @@
 											Computer Security
 										</div>
 										<div class="col-12">
-											Capture The Flag (pwndevils)
-											Binary Exploitation (Buffer Overflow, Format String Exploitation, Loop Overflow, Return Oriented Programming)
-											Binary Reverse Engineering (Ada)
-											Network Security (ARP spoofing, IP spoofing, TCP spoofing)
-											Web Security (Cross Site Scripting, SQL Injection)
-											Automatic Exploit Generation (ire)
+											In graduate school, I worked with the <a href="https://sefcom.asu.edu/">Security Engineering for Future
+											Computing (SEFCOM)</a> lab for my thesis and significant coursework. In classes led by SEFCOM faculty,
+											I learned the techniques for binary, web, and  network security. This included techniques like Buffer
+											Overflows, Format String exploits, Loop Overflows (Off-by-One exploits), Return Oriented Programming,
+											Spoofing (ARP, IP, TCP), Cross Site Scripting, and SQL Injection. I also learned the use of binary
+											reverse engineering tools like Ada. These techniques were employed with the Capture the Flag (CTF) team
+											the pwndevils. Pwndevils was established by Shellphish alumni and worked closely with the team,
+											frequently attending DEFCOM CTF events with them. The professors of SEFCOM now run the annual DEFCON CTF.
+											My research project for my thesis was the application of inductive programming techniques to exploit
+											generation, which enabled the learning of basic expoits from examples in a CTF environment. This
+											research is ongoing and pending future publication.
 										</div>
 									</div>
 									<div class="row text-row">
@@ -149,16 +164,17 @@
 											Artificial Intelligence
 										</div>
 										<div class="col-12">
-											Coursework included
-												Classifiers (SVM, KNN, Bayes Classifier, Logistic Regression)
-												Clustering (KNN, K-Means, Locality Sensitive Hashing)
-												Reinforcement Learning (Markov Decision Processes)
-											Work Applications included
-												Graph Theory and Heuristic Searches
-												Evolutionary Algorithms
-												Utility AI
-											Research Applications
-												Inductive Programming
+											During both my undergaduate and graduate degree I took multiple courses in artificial intelligence
+											techniques, including heuristic searches, classifiers, clustering, and reinforcement learning. My
+											graduate work included the mathematical foundations for algorithms like SVM, Naive Bayes, Logistic
+											Regression, Locality Sensitive Hashing, and Markov Decision Processes. My employment with the Navy
+											involved the development of genetic algorithms to optimize aircraft Tactics, Techniques, and Procedures
+											(TTPs). In my current employment with the Army, I have developed a navigation system which generates
+											a graph data structure from the terrain to enable intelligent path identification via heuristic
+											searches, like A* and Djikstra, and optimization techniques like Ant Colony Optimization. I have
+											also developed an architecture for Utility-driven AI which is used to define adaptive behaviors. The
+											methodology for my thesis research, inductive programming, an AI technique that uses Directed
+											Acyclic Graph (DAG) intersections to learn from examples.
 										</div>
 									</div>
 									<div class="row text-row">
@@ -166,11 +182,15 @@
 											Functional Programming
 										</div>
 										<div class="col-12">
-											To Discuss:
-											Purely Functional Data Structures Paper
-											Use of functional approaches to solve problems.
-												Navigation Library at work.
-												Clojure project for school.
+											Since learning functional programming, I employ its techniques with growing regularity as a useful
+											methodology for solving data transformation driven problems. Clojure is the most functional programming
+											language I have used, but I reguarly apply the functional programming features of languages like Python
+											and Java to create simpler solutions. The navigation suite I developed for the Army is laregly functional,
+											with a Graph object that merely manages basic state information and all other methods being written
+											independent of the object. This has the extra benefit of enabling these methods to be repurposed by other
+											developers, who have used the resulting library for various projects. As part of my functional paradigm
+											exploration, I studied Okasaki's foundational paper Purely Functional Data Structures, and utilize his
+											techniques regularly to improve my code (lazy evaluation, memoization, and immutability).
 										</div>
 									</div>
 								</section>
