Added about section

--- a/index.html
+++ b/index.html
@@ -46,14 +46,19 @@
 									<h2>About</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									Even as a child, I had a strong desire to understand the world. I had a 
+									passion for math and science as instruments for that understanding, and
+									read widely on these topics outside of school. I wrote my first line of
+									code as a member of my high school Robotics team, and have been pursuing
+									it as a process for understanding how to think ever since. My appetite for
+									learning is just as strong today, and I am interested in a wide variety of
+									topics. I am always interested in solving unique and challenging problems,
+									usually with the aid of computer. If you have any such problems, contact me!
 								</p>
 								<!-- Education Section -->
 								<span class="icon solid fa-graduation-cap fa-lg">&nbsp;&nbsp;Education</span><br>
 								<section style="margin-bottom: 2em;">
-									<div class="row text-row">
+									<div class="row text-row"> 
 										<div class="col-3 col-6-medium col-12-small">
 											Master's of Science
 										</div>
@@ -116,9 +121,16 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									Talk about work interests in here. Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									I have a wide variety of academic and work interests, and as such have run the gamut of
+									computer science subfields. I have deep interest in Computational Sciences, using computers
+									to solve interesting problems in science, and my employment has always been in this field.
+									Particularly I love the cross disciplinary aspect of Computational Science, which has
+									allowed me to do work in Artificial intelligence while also learning about the Scientific
+									domain of study and the mathematics it is built on. I also have interests in computer security
+									and functional programming. Ultimately my interest in Computer Science is a philosophical
+									one of how to think through problems and answer tough questions. This belongs to no single
+									domain of Computer Science, nor is it exclusive to Computer Science. As such, any work that
+									involves tough questions requiring methodical solutions is of interest to me.
 								</p>
 								<!-- Experience Section -->
 								<span class="icon solid fa-code-branch fa-lg">&nbsp;&nbsp;Experience</span><br>
