Shortened work section to remove a line.

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									I have a wide variety of academic and work interests, and as such have run the gamut of
+									I have a wide variety of academic and work interests, and have run the gamut of
 									computer science subfields. I have deep interest in Computational Sciences, using computers
-									to solve interesting problems in science, and my employment has always been in this field.
+									to solve problems in science, and my employment has always been in this field.
 									Particularly I love the cross disciplinary aspect of Computational Science, which has
 									allowed me to do work in Artificial intelligence while also learning about the Scientific
 									domain of study and the mathematics it is built on. I also have interests in computer security
