--- a/index.html
+++ b/index.html
@@ -352,9 +352,12 @@
 							<li><a href="https://github.com/crosleyzack" class="icon brands fa-github"></a></li>
 							<li><a href="https://www.linkedin.com/in/crosleyzack/" class="icon brands fa-linkedin"></a></li>
 							<li><a href="mailto:crosleyzack[at]duck[dot]com" class="icon solid fa-envelope"></a></li>
-							<!--<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>-->
+							<!--<li></li>-->
 						</ul>
 					</div>
+
+				<!-- Html5Up attribution -->
+				<span id="attribution">Design: <a href="http://html5up.net">HTML5 UP</a></span>
 
 			</div>
 
