Updated archery and rock climbing icons

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 								<header>
 									<h2>Other Interests</h2>
 								</header>
-								<span class="icon solid fa-hand-rock fa-lg">&nbsp;&nbsp;Rock Climbing</span><br>
+								<span class="icon solid fa-mountain fa-lg">&nbsp;&nbsp;Rock Climbing</span><br>
 								<p>
 									Rock climbing is a recent passion of mine, but one I have dedicated significant time to recently. I
 									enjoy both the problem solving aspect - how do you move your body to progress upwards - as well as 
@@ -305,7 +305,7 @@
 									mine, but my interest in returning to it grew during pandemic lockdown. My partner, our dog, and I have
 									begun backpacking again with a goal of completing a rim to rim trip of the Grand Canyon.
 								</p>	
-								<span class="icon solid fa-tree fa-lg">&nbsp;&nbsp;Archery</span><br>
+								<span class="icon solid fa-bullseye fa-lg">&nbsp;&nbsp;Archery</span><br>
 								<p>
 									Archery is a sport I was also introduced to during my time in Scouts and quickly grew to love.
 									I find something more enticing with archery than other shooting sports - there is something very
