--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 	Astral by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
+	Welcome! How about a little game? Enter the decrypted message as a URL, no spaces or caps.
+
+	IE https://crosleyzack.com/TheMessageHere
+
+	lwv qrw zkdw kdsshqv wr brx exw krz brx uhdfw wr lw wkdw pdwwhuv
+
+	[NOTE you could always look at the github repo for the answer, but thats no fun]
+
 -->
 <html>
 	<head>
