--- a/index.html
+++ b/index.html
@@ -4,7 +4,32 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 
-	Welcome! How about a little game? Enter the decrypted message as a URL, no spaces or caps.
+	Welcome! Would you like to play a game? 
+	
+	─────▄██▀▀▀▀▀▀▀▀▀▀▀▀▀██▄─────
+	────███───────────────███────
+	───███─────────────────███───
+	──███───▄▀▀▄─────▄▀▀▄───███──
+	─████─▄▀────▀▄─▄▀────▀▄─████─
+	─████──▄████─────████▄──█████
+	█████─██▓▓▓██───██▓▓▓██─█████
+	█████─██▓█▓██───██▓█▓██─█████
+	█████─██▓▓▓█▀─▄─▀█▓▓▓██─█████
+	████▀──▀▀▀▀▀─▄█▄─▀▀▀▀▀──▀████
+	███─▄▀▀▀▄────███────▄▀▀▀▄─███
+	███──▄▀▄─█──█████──█─▄▀▄──███
+	███─█──█─█──█████──█─█──█─███
+	███─█─▀──█─▄█████▄─█──▀─█─███
+	███▄─▀▀▀▀──█─▀█▀─█──▀▀▀▀─▄███
+	████─────────────────────████
+	─███───▀█████████████▀───████
+	─███───────█─────█───────████
+	─████─────█───────█─────█████
+	───███▄──█────█────█──▄█████─
+	─────▀█████▄▄███▄▄█████▀─────
+	──────────█▄─────▄█──────────
+	
+	Enter the decrypted message as a URL, no spaces or caps.
 
 	IE https://crosleyzack.com/TheMessageHere
 
