Added another level to the game!

--- a/9494588723249652/index.html
+++ b/9494588723249652/index.html
@@ -24,16 +24,16 @@
 						<!-- Main Panel -->
 							<article id="#" class="panel">
 								<header>
-									<h2>The End Already?</h2>
+									<h2>Amazing Job!</h2>
 								</header>
-								<p>
-									You are pretty good at this! You might be interested in my 
-									<a href="https://github.com/CrosleyZack/project_euler">repository of Project Euler answers</a>
-									<br>
-									I may add onto the puzzle later on, but this is all there is for now!
-									<br>
-								</p>
-								<img src="../images/myman.gif">
+								<span id="flag" style="display:none;">JKCDIUPPMVQVQOZIGHWVYAQMQZDDGEI</span>
+								<p>What is your name great puzzle solver?</p>
+								<script>
+									var _0x1e8f93=_0x3692;(function(_0x4e7b5e,_0x2dbdb7){var _0xdea49c=_0x3692,_0x4bcb67=_0x4e7b5e();while(!![]){try{var _0x3b5beb=-parseInt(_0xdea49c(0x8e))/0x1*(parseInt(_0xdea49c(0x88))/0x2)+parseInt(_0xdea49c(0x90))/0x3+parseInt(_0xdea49c(0x8f))/0x4+-parseInt(_0xdea49c(0x99))/0x5*(-parseInt(_0xdea49c(0x94))/0x6)+parseInt(_0xdea49c(0x8b))/0x7*(-parseInt(_0xdea49c(0x9a))/0x8)+-parseInt(_0xdea49c(0x93))/0x9*(-parseInt(_0xdea49c(0x98))/0xa)+parseInt(_0xdea49c(0x8d))/0xb;if(_0x3b5beb===_0x2dbdb7)break;else _0x4bcb67['push'](_0x4bcb67['shift']());}catch(_0x45c63b){_0x4bcb67['push'](_0x4bcb67['shift']());}}}(_0x2439,0xe846f));function sayGoodJob(){var _0x2cef54=_0x3692;val=document[_0x2cef54(0x8a)]('input')[_0x2cef54(0x97)],$('<p>')['html'](_0x2cef54(0x91)+val)[_0x2cef54(0x9b)](document['getElementById']('#'));}var onetimepad=_0x1e8f93(0x8c);function _0x2439(){var _0x254807=['Good\x20Job\x20','charCodeAt','612bpLcbB','29454UzWByS','length','concat','value','198540lWQPvH','65FNRARJ','12895032HqXnTJ','appendTo','2OlzVHU','fromCharCode','getElementById','7aKirSd','EZWOYQSYKMLLUYWZEBCJZDTYZGTFVOQDEPESMRAYVETZKWZKDHBQTHACTHWLZTXKZHOTNMDBWPHLIBDZRZERLJK','10584123JUlcyU','1474939TrVFVp','3205340TAAIdo','2582424NBVwqY'];_0x2439=function(){return _0x254807;};return _0x2439();}function get_nth_letter(_0x58cc44){var _0x242fbf=_0x1e8f93;return _0x58cc44<0x0&&(_0x58cc44=_0x58cc44+0x1a),String[_0x242fbf(0x89)](_0x58cc44%0x1a+'A'[_0x242fbf(0x92)](0x0));}function letter_to_num(_0xa05ccb){var _0x41c467=_0x1e8f93;return _0xa05ccb[_0x41c467(0x92)](0x0)-'A'[_0x41c467(0x92)](0x0);}function _0x3692(_0x13e0d6,_0x16c6cd){var _0x243954=_0x2439();return _0x3692=function(_0x369228,_0x3f482d){_0x369228=_0x369228-0x88;var _0x2d8a1f=_0x243954[_0x369228];return _0x2d8a1f;},_0x3692(_0x13e0d6,_0x16c6cd);}function pad_char(_0x5890ce,_0x1815e5,_0x3bad9b){return _0x3bad9b?get_nth_letter(letter_to_num(_0x5890ce)+letter_to_num(_0x1815e5)):get_nth_letter(letter_to_num(_0x5890ce)-letter_to_num(_0x1815e5));}function encryption(_0x5a25fa,_0x1c116b){var _0x4fde56=_0x1e8f93,_0x1a23d1='';for(let _0x3df901=0x0;_0x3df901<_0x5a25fa[_0x4fde56(0x95)];_0x3df901++){var _0x4d9258=pad_char(_0x5a25fa[_0x3df901],onetimepad[_0x3df901],_0x1c116b);_0x1a23d1=_0x1a23d1[_0x4fde56(0x96)](_0x4d9258);}return _0x1a23d1;}function decrypt(_0x3200ba){return encryption(_0x3200ba,![]);}
+								</script>
+								<input type="text" name="Name" id="input" />
+								<button onclick="sayGoodJob()">Submit</button>
+								<p id="output"></p>
 							</article>
 					</div>
 
