Updated the first game page header

--- a/itsnotwhathappenstoyoubuthowyoureacttoitthatmatters/index.html
+++ b/itsnotwhathappenstoyoubuthowyoureacttoitthatmatters/index.html
@@ -23,13 +23,13 @@
 
 						<!-- Main Panel -->
 							<article id="#" class="panel">
+								<header>
+									<h2>Welcome to The Game</h2>
+								</header>
+
 								<p>
 									<i>"It's not what happens to you, but how you react to it that matters" &#8212; Epictetus</i>
 								</p>
-								
-								<header>
-									<h2>About</h2>
-								</header>
 
 								<p>
 									What is the sum of the squares of the first ten thousand twin primes?
