--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 											Since learning functional programming, I employ its techniques with growing regularity as a useful
 											methodology for solving data transformation driven problems. Clojure is the most functional programming
 											language I have used, but I reguarly apply the functional programming features of languages like Python
-											and Java to create simpler solutions. The navigation suite I developed for the Army is laregly functional,
+											and Java to create simpler solutions. The navigation suite I developed for the Army is mostly functional,
 											with a Graph object that merely manages basic state information and all other methods being written
 											independent of the object. This has the extra benefit of enabling these methods to be repurposed by other
 											developers, who have used the resulting library for various projects. As part of my functional paradigm
@@ -304,9 +304,8 @@
 										</div>
 										<div class="col-10 col-12-small">
 											Used for personal projects and college course project. This language was how I 
-											learned functional programming and take advantage of homoiconicity with real macros. 
-											I would love to use Clojure more, but its still a fairly obscure
-											language.
+											learned functional programming and the advantages of homoiconicity with real macros. 
+											I would love to use Clojure more, but its still a fairly obscure language.
 										</div>
 									</div>
 									<div class="row text-row">
@@ -358,7 +357,7 @@
 								<p>
 									Weightlifting is a necessary training to gain and maintain the strength I need for other
 									activities, like archery and rock climbing. Beyond that my regular visits to the gym organize
-									my day and motivate me. My current weightlifting goal is to build strength,
+									my day and motivate me. The  My current weightlifting goal is to build strength,
 									increasing the weight for compound lifts to help improve my rock climbing.
 								</p>
 								<span class="icon solid fa-balance-scale fa-lg">&nbsp;&nbsp;Philosophy</span><br>
