Removed extra "the"

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 								<p>
 									Weightlifting is a necessary training to gain and maintain the strength I need for other
 									activities, like archery and rock climbing. Beyond that my regular visits to the gym organize
-									my day and motivate me. The  My current weightlifting goal is to build strength,
+									my day and motivate me. My current weightlifting goal is to build strength,
 									increasing the weight for compound lifts to help improve my rock climbing.
 								</p>
 								<span class="icon solid fa-balance-scale fa-lg">&nbsp;&nbsp;Philosophy</span><br>
