Added CV link to my website.

--- a/index.html
+++ b/index.html
@@ -166,6 +166,11 @@
 									domain of Computer Science, nor is it exclusive to Computer Science. As such, any work that
 									involves tough questions requiring methodical solutions is of interest to me.
 								</p>
+								<!-- CV -->
+								<span class="icon solid fa-file fa-lg">&nbsp;&nbsp;Curriculum Vitae</span><br>
+								<p>
+									Please visit my <a class="simple_link" href="https://github.com/crosleyzack/resume">resume github respository.</a>
+								</p>
 								<!-- Experience Section -->
 								<span class="icon solid fa-code-branch fa-lg">&nbsp;&nbsp;Experience</span><br>
 								<section style="margin-bottom: 2em;">
