Added meta desription for SEO.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <html>
 	<head>
 		<title>Zackary Crosley Computer Scientist</title>
+    	<meta name="description" content="Computer Scientist, Programming Language Nerd, Security and Privacy Advocate, Computational Modeling">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
