Updated email address.

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 						<ul class="copyright">
 							<li><a href="https://github.com/crosleyzack" class="icon brands fa-github"></a></li>
 							<li><a href="https://www.linkedin.com/in/crosleyzack/" class="icon brands fa-linkedin"></a></li>
-							<li><a href="mailto:crosleyzack[at]duck[dot]com" class="icon solid fa-envelope"></a></li>
+							<li><a href="mailto:mail@crosleyzack.com" class="icon solid fa-envelope"></a></li>
 							<!--<li></li>-->
 						</ul>
 					</div>
