Updated Julia language to be more clear.

--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
 											Julia
 										</div><div class="col-10 col-12-small">
 											Used for personal projects. Huge fan of the type system and multi-dispatch. My
-											only complaint with this language is the fact it is eager evaluation and not 
-											lazy evaluation. If it was lazy by default, it would be my new default language. 
+											only complaint with this language is eager evaluation by default. If it was lazy
+											by default, it would be my new default language.
 										</div>
 									</div>
 									<div class="row text-row">
