Updated wording on about page.

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 									<h2>About</h2>
 								</header>
 								<p>
-									Even as a child, I had a strong desire to understand the world. I had a 
+									I have always had a strong desire to understand the world. I have a 
 									passion for math and science as instruments for that understanding, and
-									read widely on these topics outside of school. I wrote my first line of
+									read widely on these topics throughout my life. I wrote my first line of
 									code as a member of my high school Robotics team, and have been pursuing
 									it as a process for understanding how to think ever since. My appetite for
 									learning is just as strong today, and I am interested in a wide variety of
