--- a/index.html
+++ b/index.html
@@ -177,24 +177,6 @@
 								<section style="margin-bottom: 2em;">
 									<div class="row text-row">
 										<div class="col-12">
-											Scientific Computing
-										</div>
-										<div class="col-12">
-											My professional career has been spent with the Department of Defense working in the field of 
-											Computational Sciences, specifically Combat Modeling. My first job with the Navy involved development
-											of a deterministic, closed-form simulation used to evaluate aircraft Tactics, Techniques, and
-											Procedures (TTPs). This simulation mutated Subject Matter Expert (SME) encoded strategies across
-											a variety of scenarios to evaluate effectiveness of alternative TTPs. Our work involved not only
-											algorithm development but the maintenance of the two hundred node, Windows Server cluster computer
-											on which they were run. My work included performing updates and developing utilities for job
-											submission and server maintenance. My current job is working on an Army closed-form, Monte Carlo, 
-											discrete event combat simulator used for analysis of acquisition decisions. I have worked on defining
-											automated and intelligent behaviors for entities within the simulation as well as extending the
-											simulation to model new functionalities.
-										</div>
-									</div>
-									<div class="row text-row">
-										<div class="col-12">
 											Computer Security
 										</div>
 										<div class="col-12">
@@ -204,13 +186,12 @@
 											Overflows, Format String exploits, Loop Overflows (Off-by-One exploits), Return Oriented Programming,
 											Spoofing (ARP, IP, TCP), Cross Site Scripting, and SQL Injection. I also learned the use of binary
 											reverse engineering tools like Ada. These techniques were employed with the Capture the Flag (CTF) team
-											the pwndevils. Pwndevils was established by Shellphish alumni and worked closely with the team,
-											frequently attending DEFCOM CTF events with them. The professors of SEFCOM now run the annual DEFCON CTF.
-											My research project for my thesis was the application of inductive programming techniques to exploit
-											generation, which enabled the learning of basic expoits from examples in a CTF environment. This
-											research is ongoing and pending future publication.
-										</div>
-									</div>
+											the pwndevils. Pwndevils was established by Shellphish alumni and worked closely with the team, frequently
+											attending DEFCOM CTF events with them. My research project for my thesis was the application of inductive
+											programming techniques to exploit generation, which enabled the learning of basic expoits from examples
+											in a CTF environment. This research is ongoing and pending future publication. My current role with
+											Censys involves development of the Attack Surface Management Risks platform, which enables users to 
+											identify vulnerabilities in their internet facing devices.
 									<div class="row text-row">
 										<div class="col-12">
 											Artificial Intelligence
@@ -227,6 +208,24 @@
 											also developed an architecture for Utility-driven AI which is used to define adaptive behaviors. The
 											methodology for my thesis research, inductive programming, an AI technique that uses Directed
 											Acyclic Graph (DAG) intersections to learn from examples.
+										</div>
+									</div>
+									<div class="row text-row">
+										<div class="col-12">
+											Scientific Computing
+										</div>
+										<div class="col-12">
+											My professional career has been spent with the Department of Defense working in the field of 
+											Computational Sciences, specifically Combat Modeling. My first job with the Navy involved development
+											of a deterministic, closed-form simulation used to evaluate aircraft Tactics, Techniques, and
+											Procedures (TTPs). This simulation mutated Subject Matter Expert (SME) encoded strategies across
+											a variety of scenarios to evaluate effectiveness of alternative TTPs. Our work involved not only
+											algorithm development but the maintenance of the two hundred node, Windows Server cluster computer
+											on which they were run. My work included performing updates and developing utilities for job
+											submission and server maintenance. My current job is working on an Army closed-form, Monte Carlo, 
+											discrete event combat simulator used for analysis of acquisition decisions. I have worked on defining
+											automated and intelligent behaviors for entities within the simulation as well as extending the
+											simulation to model new functionalities.
 										</div>
 									</div>
 									<div class="row text-row">
